--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ classifiers = [
 ]
 dependencies = [
     "pyyaml>=6.0",
+    "ruamel.yaml>=0.18",
     "typer>=0.9.0",
     "textual>=0.50.0",
     "tree-sitter>=0.25.0",
